@@ -1,5 +1,7 @@
 Revision history for Perl extension Hash::MultiValue
 
+        - Add support for Storable serialization
+
 0.11  Sun Feb 12 13:04:54 PST 2012
         - Fix segfaulting splice invocation on perls < 5.8.7
         - Fix uninitialized warning on older perls
